# pinder

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  changelog.html  changelog_data.md  codecov.yml  example_readme.html  examples.html  faq.html  faq.md  genindex.html  index.html  limitations.html  limitations.md  methods_readme.html  mypy.ini  objects.inv  pinder-index.html  pinder-loader.html  pinder-mlsb.html  pinder-system.html  pinder.html  py-modindex.html  pyproject.toml  pytest.ini  readme.html  ruff.toml  search.html  searchindex.js  superposition.html  tox.ini  version.sh
.github/workflows/: docs.yaml  main.yaml  pr.yaml  publish.yaml
_downloads/3d7ea4d870bb57d30b3576fec6512b21/: structure.py
_modules/: index.html
_modules/pinder/: methods.html
_sources/: example_readme.md.txt  examples.rst.txt  faq.md.txt  index.rst.txt  limitations.md.txt  methods_readme.md.txt  pinder-eval.ipynb.txt  pinder-loader.ipynb.txt  superposition.ipynb.txt
_sources/source/: modules.rst.txt  pinder.core.index.rst.txt  pinder.core.loader.rst.txt  pinder.core.rst.txt  pinder.core.structure.rst.txt  pinder.core.submit.rst.txt  pinder.core.utils.rst.txt  pinder.data.annotation.rst.txt  pinder.data.pipeline.rst.txt  pinder.data.plot.rst.txt  pinder.data.qc.rst.txt  pinder.data.rst.txt  pinder.eval.clashes.rst.txt  pinder.eval.dockq.rst.txt  pinder.eval.rst.txt  pinder.methods.preprocess.rst.txt  pinder.methods.rst.txt  pinder.methods.run.af2mm.rst.txt  pinder.methods.run.frodock.rst.txt  pinder.methods.run.hdock.rst.txt  pinder.methods.run.patchdock.rst.txt  pinder.methods.run.rst.txt  pinder.methods.train.rst.txt  pinder.rst.txt
_static/: custom.css  documentation_options.js  pygments.css
docker/frodock/: Dockerfile.frodock
docker/hdock/: Dockerfile.hdock
docker/patchdock/: Dockerfile.patchdock
docs/: build.sh  changelog.md  changelog_link.md  conf.py  examples.rst  faq_link.md  index.rst  pinder.rst  readme.md  viewcode.py
docs/_static/: custom.css
examples/: README.md  pinder-eval.ipynb  pinder-index.ipynb  pinder-loader.ipynb  pinder-mlsb.ipynb  pinder-system.ipynb
source/: modules.html  pinder.core.html  pinder.core.index.html  pinder.core.loader.html  pinder.core.structure.html  pinder.core.submit.html  pinder.core.utils.html  pinder.data.annotation.html  pinder.data.html  pinder.data.pipeline.html  pinder.data.plot.html  pinder.data.qc.html  pinder.eval.clashes.html  pinder.eval.dockq.html  pinder.eval.html  pinder.html  pinder.methods.html  pinder.methods.preprocess.html  pinder.methods.run.af2mm.html  pinder.methods.run.frodock.html  pinder.methods.run.hdock.html  pinder.methods.run.html  pinder.methods.run.patchdock.html  pinder.methods.train.html
tests/: conftest.py  test_import.py
tests/data/: conftest.py  test_alignment_utils.py  test_cache.py  test_csv_utils.py  test_data_run.py  test_find_transitive_hits.py  test_foldseek_utils.py  test_get_annotations.py  test_get_apo.py  test_get_clusters.py  test_get_data.py  test_get_dimers.py  test_get_splits.py  test_graph_utils.py  test_graphql.py  test_ialign.py  test_id.py  test_qc.py  (+4 more)
(+463 files in other folders)
